# model-upgrade-automation

./: .gitignore  README.md  apm.lock.yaml  apm.yml  pyproject.toml
.agents/skills/adr-author/: SKILL.md  pyproject.toml
.agents/skills/adr-author/references/: authoring-rubric.md
.agents/skills/adr-author/scripts/: __init__.py  _utils.py  normalize_template.py  render_template.py  scan_sensitive_content.py  update_lineage.py  validate_config.py  validate_frontmatter.py
.agents/skills/adr-author/templates/: diagram-ascii.md  diagram-mermaid.md  madr-v4-frontmatter-overlay.md  y-statement.md
.agents/skills/adr-author/tests/: __init__.py  conftest.py  fuzz_harness.py  test_normalize_template.py  test_render_template.py  test_scan_sensitive_content.py  test_update_lineage.py  test_utils.py  test_validate_frontmatter.py
.agents/skills/adr-author/tests/corpus/: 0_frontmatter_minimal  1_markdown_anchors  2_slug_valid  README.md
.agents/skills/powerpoint/: SECURITY.md  SKILL.md  content-yaml-template.md  pyproject.toml
.agents/skills/powerpoint/scripts/: Invoke-EmbedAudio.ps1  Invoke-ExportSvg.ps1  Invoke-GenerateThemes.ps1  Invoke-PptxPipeline.ps1  build_deck.py  embed-audio.sh  embed_audio.py  export-svg.sh  export_slides.py  export_svg.py  extract_content.py  generate-themes.sh  generate_themes.py  invoke-pptx-pipeline.sh  pdf_safety.py  pptx_charts.py  pptx_colors.py  pptx_fills.py  pptx_fonts.py  pptx_shapes.py  pptx_tables.py  pptx_text.py  pptx_utils.py  render_pdf_images.py  validate_deck.py  validate_geometry.py  validate_slides.py
.agents/skills/powerpoint/tests/: Invoke-EmbedAudio.Tests.ps1  Invoke-ExportSvg.Tests.ps1  Invoke-GenerateThemes.Tests.ps1  Invoke-PptxPipeline.Tests.ps1  conftest.py  fuzz_harness.py  strategies.py  test_build_deck.py  test_embed_audio.py  test_export_slides.py  test_export_svg.py  test_extract_content.py  test_extract_content_integration.py  test_fixture_generation.py  test_fuzz_build_deck.py  test_fuzz_pdf_safety.py  test_fuzz_pptx_colors.py  test_fuzz_pptx_tables.py  test_fuzz_validate_slides.py  test_generate_themes.py  test_pdf_safety.py  test_pptx_charts.py  test_pptx_colors.py  test_pptx_fills.py  test_pptx_fonts.py  test_pptx_shapes.py  test_pptx_tables.py  test_pptx_text.py  test_pptx_utils.py  test_render_pdf_images.py  test_validate_deck.py  test_validate_geometry.py  test_validate_slides.py
.agents/skills/powerpoint/tests/corpus/: README.md  generate_seeds.py
.agents/skills/tts-voiceover/: SECURITY.md  SKILL.md  pip-audit-known-vulnerabilities.txt  pyproject.toml
.agents/skills/tts-voiceover/scripts/: Invoke-EmbedAudio.ps1  Invoke-GenerateVoiceover.ps1  embed-audio.sh  embed_audio.py  generate-voiceover.sh  generate_voiceover.py
.agents/skills/tts-voiceover/scripts/Modules/: TtsVoiceoverHelpers.psm1
.agents/skills/tts-voiceover/tests/: TtsVoiceoverHelpers.Tests.ps1  fuzz_harness.py  test_embed_audio.py  test_generate_voiceover.py
.agents/skills/tts-voiceover/tests/corpus/: 0_acronym_text  0_ssml_fragment  0_valid_yaml
.agents/skills/vally-tests/: SKILL.md  pyproject.toml
.agents/skills/vally-tests/assets/: corpus-import-template.csv  corpus-import-template.xlsx  stimulus-template.yml
.agents/skills/vally-tests/references/: agents.md  eval-suite-routing.md  instructions.md  prompts.md  refusal-taxonomy.md  skills.md
.agents/skills/vally-tests/scripts/: Lint-VallyTestSafety.ps1  New-Stimulus.ps1  Select-Grader.ps1  import_corpus.py  lint-vally-test-safety.sh  new-stimulus.sh  select-grader.sh
.agents/skills/vally-tests/tests/: Lint-VallyTestSafety.Tests.ps1  New-Stimulus.Tests.ps1  Select-Grader.Tests.ps1  __init__.py  fuzz_harness.py  test_import_corpus.py  test_lint_safety.py
.agents/skills/vally-tests/tests/corpus/: 0_normalize_prompt  1_hash_prompt  2_validate_row  3_build_patch_entry  4_load_existing_hashes  README.md
.artifacts/: fc-github-main-encoded-gateb.json
config/: azure.env.example  evaluation.yaml  models.yaml  quality_safety_benchmarks.yaml  recommender.yaml  tg7-reliability-alert-definitions.yaml  tg7-reliability-workbook-definitions.yaml
datasets/: adversarial_probes.jsonl  general_qa.jsonl
docs/: demo-results.md  live-eval-human-gate.md  oidc-setup.md  setup-guide.md  tg2-operator-evidence.md  tg3-handoff-contract.md  tg7-incident-playbook-gateb.md  troubleshooting.md  (+2 more)
(+948 files in other folders)
