[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "model-upgrade-automation"
version = "0.1.0"
description = "Automated Azure AI model-upgrade detection, evaluation, and reporting pipeline."
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4",
]
evaluation = [
    "azure-ai-evaluation[redteam]>=1.18.1",
    "azure-identity>=1.17",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests/unit"]
