[project]
name = "tts-voiceover-skill"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
    "azure-cognitiveservices-speech>=1.41",
    "azure-identity>=1.19",
    "lxml>=6.1.0",  # direct dep (embed_audio.py) and transitive via python-pptx; explicit pin ensures CVE patches
    "python-pptx>=1.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.15",
]
fuzz = [
    "atheris>=3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]
python_files = ["test_*.py", "fuzz_harness.py"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
